# quotes-museum-client

./: .gitignore  CMakeLists.txt  readme.md
src/: main.cpp
src/api/: quotesapi.cpp  quotesapirepresenter.cpp  quoteslogapi.cpp
src/forms/: addownerdialog.ui  authedquotes.ui  dialogupdatequote.ui  inputowner.ui  mainwindow.ui  quoteinput.ui  registerform.ui  searchtab.ui  singlequotecard.ui  startform.ui
src/include/: abstractfsm.h  addownerdialog.h  authedquotes.h  connection.h  databasehandler.h  dialogupdatequote.h  inputowner.h  mainwindow.h  quotecontextmenu.h  quoteinput.h  quotesapi.h  quotesapirepresenter.h  quoteslogapi.h  registerform.h  searchtab.h  singlequotecard.h  singlequotemodel.h  startform.h  user.h
src/models/: connection.cpp  singlequotemodel.cpp  user.cpp
src/ui_sources/: addownerdialog.cpp  authedquotes.cpp  dialogupdatequote.cpp  inputowner.cpp  mainwindow.cpp  quoteinput.cpp  registerform.cpp  searchtab.cpp  singlequotecard.cpp  startform.cpp
src/widgets/: checkablemenu.cpp  checkablemenu.h  clickablelabel.h  quotecontextmenu.cpp
